welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:5: error: ')' expected but 'if' found.
	if ( Math.abs ( b - 10 ) < Maths.abs ( a - 10) {
        ^close10:8: error: ')' expected but 'if' found.
	if ( Math.abs ( a - 10 ) == Maths.abs ( b - 10) {
        ^close10:11: error: ')' expected but '}' found.
} 
^